Bug 1500273 - Ensure backward focus navigation works in Shadow DOM. r=smaug, a=RyanVM

When entering into a Shadow DOM in backward navigation, the frame still points
to the last frame in Shadow DOM which could be a non-focusable frame, so move
the handling of backward navigation for Shadow DOM upward.

Differential Revision: https://phabricator.services.mozilla.com/D14069

--HG--
extra : source : c93e450706aea16481ae2cede4946fa3985cba33
extra : histedit_source : 4f256a9dd998a1153c2300dc11f7726c3395c3c1